--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.1",
+    "@angular/cdk": "^15.2.1",
     "@angular/common": "^15.2.1",
     "@angular/compiler": "^15.2.1",
     "@angular/core": "^15.2.1",
     "@angular/forms": "^15.2.1",
+    "@angular/material": "^15.2.1",
     "@angular/platform-browser": "^15.2.1",
     "@angular/platform-browser-dynamic": "^15.2.1",
     "@angular/router": "^15.2.1",
@@ -22,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^14.0.1",
     "angular-highcharts": "^15.0.1",
     "bootstrap": "^5.2.3",
+    "highcharts": "^10.3.3",
     "maplibre-gl": "^2.1.9",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
